<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical">
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
    <Switch
        android:id="@+id/switch1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/reminder_switch" 
        android:textColor="#656565"
        android:background="@drawable/shape"
        android:layout_alignParentLeft="true"
        android:textOn="On"
        android:textOff="Off"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/vibrate_setting"
        android:id="@+id/tv01"
        android:layout_marginTop="10dp"
        android:textColor="#656565"
        android:layout_alignParentLeft="true"
        android:textSize="15sp"
        android:layout_below="@+id/switch1"/>
	 <CheckBox
		 android:id="@+id/Isvibrate"
		 android:layout_width="fill_parent"
		 android:layout_height="wrap_content"
		 android:checked="false"
		 android:text="@string/Isvibrate"
		 android:layout_below="@+id/tv01"
		 android:textColor="#656565"
		 android:layout_alignParentLeft="true"
		 android:background="@drawable/shape"
	 ></CheckBox>
	  <TextView
	     android:layout_width="fill_parent"
	     android:layout_height="wrap_content"
	     android:text="@string/LED_setting"
	     android:id="@+id/tv02"
	     android:textColor="#656565"
	     android:textSize="15sp"
	     android:layout_alignParentLeft="true"
	     android:layout_below="@+id/Isvibrate"/>
   <RadioGroup 
       android:id="@+id/radioGroup"
       android:layout_marginTop="10dp"
       android:contentDescription="@string/LED_mode"
       android:layout_width="fill_parent" 
       android:layout_height="wrap_content"
       android:layout_below="@+id/tv02"
       android:layout_alignParentLeft="true"
       android:background="@drawable/shape">
   		<RadioButton 
   		    android:layout_width="wrap_content" 
   		    android:layout_height="wrap_content" 
   		    android:id="@+id/radioMode1" 
   		    android:text="@string/mode1"
   		    android:layout_alignParentLeft="true"
   		    android:textColor="#656565"
   		    android:layout_below="@+id/radioGroup" ></RadioButton>
       <RadioButton 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:id="@+id/radioMode2" 
            android:text="@string/mode2"
            android:textColor="#FF717A"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/radioMode1"></RadioButton>    
        <RadioButton 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:id="@+id/radioMode3" 
            android:text="@string/mode3"
            android:textColor="#97CE6A"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/radioMode2"></RadioButton>  
       <RadioButton 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:id="@+id/radioMode4" 
            android:text="@string/mode4"
            android:textColor="#78D6FD"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/radioMode3"></RadioButton>  
  </RadioGroup>
  
   </LinearLayout>
   <ImageButton
	    android:id="@+id/btn_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/save"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="#00000000"
        android:layout_weight="0"
	  ></ImageButton>

</LinearLayout>